# thesis

./: .gitignore  ChargeScript.py  DataOrgScript.py  FloatmarkUart.py  README.md  UartScript.py
BlinkLED/: CMakeLists.txt
BlinkLEDArch/: CMakeLists.txt  blink2.c
Demos/BlinkLED/: BlinkLED.c
Demos/BlinkLEDArch/: CMakeLists.txt
FFT/: CMakeLists.txt  fft_large.c  fft_large_i.c  fft_small.c  fft_small_i.c
HelloWorld/: CMakeLists.txt
TestingPCB/: TestingPCB.kicad_pcb  TestingPCB.kicad_pro  TestingPCB.kicad_sch
basicmath/: CMakeLists.txt  basicmath_large.c  basicmath_small.c  cubic.c  instruction_count.c  instruction_count.h  rad2deg.c  snipmath.h
bitcount/: CMakeLists.txt  bitcnts.c  bitcnts_large.c  bitcnts_small.c
coremark/: CMakeLists.txt  core_main.c  core_portme.c  core_portme.h
doublemark_add/: CMakeLists.txt  main.c
doublemark_div/: CMakeLists.txt  main.c
doublemark_mult/: CMakeLists.txt  main.c
doublemark_sub/: CMakeLists.txt  instruction_count.c  instruction_count.h  main.c
featureTesting/: CMakeLists.txt  instruction_count.c  instruction_count.h  main.c
floatmark/: CMakeLists.txt  instruction_count.c  main.c  power_functions.c  power_functions.h  powman_example.c
floatmark_add/: CMakeLists.txt  main.c
floatmark_div/: CMakeLists.txt  main.c
floatmark_mult/: CMakeLists.txt  instruction_count.h  main.c
floatmark_sub/: CMakeLists.txt  main.c
intmark_add/: CMakeLists.txt  main.c
intmark_div/: CMakeLists.txt  main.c
intmark_mult/: CMakeLists.txt  main.c
intmark_sub/: CMakeLists.txt  main.c
qsort/: CMakeLists.txt  powman_example.c  powman_example.h  qsort_large.c  qsort_small.c
